2017-02-22: First release
2017-02-23: Add unit tests and coding standards
2017-05-04: Add support for GZIP compression
2017-05-16: Add description to ticket resource and update bulk example
2017-05-18: Update tests
2017-05-26: Add support for session resource
2017-05-31: Add scale factor for interver endpoint
2017-06-29: Support Users and Responsiblities endpoint
2017-08-09: Add battery, stringboxes, ticket attachemnt and support OAuth2
2017-09-13: Add ticket history , extend update and create ticket endpoint inorder to access assignee
2017-10-19: Add serial UTC DateTime as return values, create comment support createdAt