@@ -117,6 +117,29 @@ class CommentsTest extends \PHPUnit_Framework_TestCase {
         $this->assertEquals('454548', $commentId);
     }
 
+
+    public function testCreateCommentWithDatetime() {
+        $commentDetail = $this->getCommentDetail2();
+
+        $expectedResponse = file_get_contents(__DIR__ . '/responses/createComment.json');
+        $this->api->expects($this->once())
+            ->method('run')
+            ->with(
+                $this->identicalTo('tickets/123/comments'),
+                null,
+                json_encode([
+                    'comment' => 'New Comment 2',
+                    'createdAt' => '2017-10-01T00:00:00+03:00',
+                ]),
+                'POST'
+            )
+            ->willReturn(
+                $expectedResponse
+            );
+        $commentId = $this->api->ticket('123')->comments()->create($commentDetail);
+        $this->assertEquals('454548', $commentId);
+    }
+
     /**
      * @expectedException \InvalidArgumentException
      * @expectedExceptionMessage Comment is invalid!
@@ -147,6 +170,17 @@ class CommentsTest extends \PHPUnit_Framework_TestCase {
         $commentDetail = new CommentDetail();
         $commentDetail->date = \DateTime::createFromFormat(\DateTime::RFC3339, '2016-01-01T00:00:00+00:00');
         $commentDetail->comment = 'New Comment';
+        $commentDetail->username = 'test.username';
+        return $commentDetail;
+    }
+
+    /**
+     * @return CommentDetail
+     */
+    private function getCommentDetail2() {
+        $commentDetail = new CommentDetail();
+        $commentDetail->createdAt = \DateTime::createFromFormat(\DateTime::RFC3339, '2017-10-01T00:00:00+03:00');
+        $commentDetail->comment = 'New Comment 2';
         $commentDetail->username = 'test.username';
         return $commentDetail;
     }
